# mod-talentmaster

./: CMakeLists.txt  README.md  mod_talentmaster.cpp
conf/: mod_talentmaster.conf.dist
src/: mod_talentmaster.cpp
